Bug 121253 - Database wizard opens when press cmd+A inside the extension manager window
Summary: Database wizard opens when press cmd+A inside the extension manager window
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All macOS (All)
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.2 target:25...
Keywords: dataLoss
Depends on:
Blocks: Shortcuts-Mac Extension-Manager Database-Wizard
  Show dependency treegraph
 
Reported: 2018-11-07 17:43 UTC by Telesto
Modified: 2025-09-04 09:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-11-07 17:43:47 UTC
Description:
Database wizard opens when press CTRL+A inside the extension manager window

Steps to Reproduce:
1. Open Writer
2. Open the extension manager
3. Press CMD+A / CTRL+A

Actual Results:
Database wizard opens 

Expected Results:
Nothing?


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.2.0.0.alpha1+
Build ID: 317f5f2323b8ff7948c4812faaeb0c2a3b907ce8
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; VCL: osx; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2018-11-07_00:12:59
Locale: nl-NL (nl_NL.UTF-8); Calc: threaded
Comment 1 Alex Thurgood 2018-11-07 17:51:43 UTC
Confirming with

Version: 6.2.0.0.alpha1+
Build ID: 740b99783b5480fcd1e5fce7c1beb5967d015041
CPU threads: 8; OS: Mac OS X 10.14; UI render: default; VCL: osx; 
Locale: fr-FR (fr_FR.UTF-8); Calc: threaded

sigh
Comment 2 Alex Thurgood 2018-11-07 17:58:11 UTC
Note that this does not happen with

Version: 6.1.2.1
Build ID: 65905a128db06ba48db947242809d14d3f9a93fe
Threads CPU : 8; OS : Mac OS X 10.14; UI Render : par défaut; 
Locale : fr-FR (fr_FR.UTF-8); Calc: group threaded
Comment 3 Aron Budea 2018-12-09 00:24:50 UTC
I don't understand, for me Ctrl-A opens the file picker dialog, and Cmd-A opens the extensions manager. This is the same both in the latest state of 6.2 macOS bibisect repo, and in 5.0.0.5.
Comment 4 Telesto 2018-12-09 08:22:43 UTC
(In reply to Aron Budea from comment #3)
> I don't understand, for me Ctrl-A opens the file picker dialog, and Cmd-A
> opens the extensions manager. This is the same both in the latest state of
> 6.2 macOS bibisect repo, and in 5.0.0.5.

to be sure..
1. Open Writer
2. Tools -> Extension manager
3. Press CMD+A
Comment 5 Aron Budea 2018-12-09 19:53:09 UTC
(In reply to Telesto from comment #4)
> to be sure..
> 1. Open Writer
> 2. Tools -> Extension manager
> 3. Press CMD+A
Yes, this opens the Database Wizard for me both in 6.2 and in 5.0.0.5, so I can repro, but it's not a recent regression for me.

Additionally, the title says Ctrl-A, and these are different keys that behave differently.
Comment 6 eisa01 2020-05-21 14:41:47 UTC
This is happening on LO 3.3 when you press cmd+a too, so it's not a regression.

Also, this is a very minor bug - not sure why you would even press cmd+a in the Extension manager so reducing from the current High - Major
Comment 7 QA Administrators 2022-05-22 03:42:30 UTC Comment hidden (obsolete)
Comment 8 Alex Thurgood 2022-05-27 12:05:11 UTC
No repro for me with

Version: 7.3.1.3 / LibreOffice Community
Build ID: a69ca51ded25f3eefd52d7bf9a5fad8c90b87951
CPU threads: 8; OS: Mac OS X 12.2.1; UI render: default; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded
Comment 9 QA Administrators 2024-05-27 03:14:29 UTC Comment hidden (obsolete)
Comment 10 eisa01 2025-03-04 17:53:58 UTC
This is still present, in addition it totally breaks the interface such that you need to force quit. The database wizard that open up doesn't register any clicks

I pressed command+A

Upping the importance given the potential for data loss, but placing it one notch below critical given the expected rarity of encountering this

In addition, it shows the highlighted menu bug 117851 I just closed as WFM...
Comment 11 Alex Thurgood 2025-03-05 09:38:07 UTC
Also repro with

Version: 25.2.1.2 (AARCH64) / LibreOffice Community
Build ID: d3abf4aee5fd705e4a92bba33a32f40bc4e56f49
CPU threads: 8; OS: macOS 15.3.1; UI render: Skia/Metal; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded

In my test with the above version, the Extensions GUI gets sent to the back, and the Database wizard displayed in the foreground.
Comment 12 Alex Thurgood 2025-03-05 11:16:32 UTC
(In reply to Alex Thurgood from comment #11)
> Also repro with
> 
> Version: 25.2.1.2 (AARCH64) / LibreOffice Community
> Build ID: d3abf4aee5fd705e4a92bba33a32f40bc4e56f49
> CPU threads: 8; OS: macOS 15.3.1; UI render: Skia/Metal; VCL: osx
> Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
> Calc: threaded
> 
> In my test with the above version, the Extensions GUI gets sent to the back,
> and the Database wizard displayed in the foreground.

Adding that the interface isn't broken for me at this stage, I can interact with either of the dialogs. No apparent dataloss ?
Comment 13 Neil Roberts 2025-09-01 14:00:17 UTC
It looks like this is happening because the default menu has a shortcut for creating a new database assigned to Cmd+A. The shortcut is being assigned in shutdowniconaqua.mm on line 604. These lines were added in 6efdd1444810 which is a patch from January 2025. Before that, the same shortcut was assigned on the default menu based on the name of the menu item. This ends up being “A” because “D” is already used for a new Draw document and the algorithm just picked the next available letter. It was also affected by the current language pack, so for example in French this problem didn’t occur because the menu item is called “Base de données” and the shortcut key ended up being Cmd+B.

I think Cmd+A is an unfortunate choice for a shortcut key because it’s used to select all the text in any text box. So with the extensions dialog you might run into it if you type something into the search box, change your mind and then press Cmd+A to highlight the old text in order to get rid of it. 

The extensions dialog gets the default menu because it doesn’t have a parent. I tried to find another dialog that also doesn’t have a parent but the only one I could find is the one to check for updates. That doesn’t have any text boxes so it probably doesn’t really matter.

I think a simple fix would be to just remove all these shortcuts from the default menu. I don’t think it makes sense to have these shortcuts on a few random dialog boxes. It’s worth noting that the welcome window when you first open LibreOffice doesn’t have them and if they made sense anywhere I think it would be there. Furthermore the shortcuts don’t work on any other platform, only MacOS.

Failing that, if there is a good reason to keep the other shortcuts I think it would be good to at least remove the Cmd+A one because it conflicts with the common action of selecting all the text in a text box.

I can try making a patch for it if people agree that it’s a good idea.
Comment 14 Commit Notification 2025-09-03 21:52:50 UTC
Neil Roberts committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9d2da58ec93db75d2fcfce3dc001d9db0851e3c6

tdf#121253 Remove the default menu new document shortcut keys on MacOS

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Patrick (volunteer) 2025-09-03 21:55:52 UTC
I have committed @Neil's fix and the fix should be in tomorrow's (04 September 2025) nightly master builds:

https://dev-builds.libreoffice.org/daily/master/current.html

Note for macOS testers: the nightly master build installer does not overwrite any LibreOffice official versions. Instead, it will be installed as a separate application called "LibreOfficeDev" in the /Applications folder.

Because this is a "test" build, you will need to do the following steps before you launch the LibreOfficeDev application:

1. Go to the Finder and navigate to the /Applications/Utilities folder
2. Launch the "Terminal" application
3. Paste the following command in the Terminal application window and press the Return key to execute the command:

   xattr -d com.apple.quarantine /Applications/LibreOfficeDev.app
Comment 16 Commit Notification 2025-09-04 04:32:32 UTC
Neil Roberts committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/166e4c13b579fc43ba7144c0b78a1cde39d2df6c

tdf#121253 Remove the default menu new document shortcut keys on MacOS

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2025-09-04 09:25:55 UTC
Neil Roberts committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/debbb3b40e485f924e2066229480ea2302ea2643

tdf#121253 Remove the default menu new document shortcut keys on MacOS

It will be available in 25.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.